css/main.css
/*! HTML5 Boilerplate v5.2.0 | MIT License | https://html5boilerplate.com/ */

/* ==========================================================================
   Base styles
   ========================================================================== */

* {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}

html, body {
  height: 100%;
  font-family: "acta-display", serif;
  font-size: 16px;
  font-variant-ligatures: common-ligatures;
  -moz-font-feature-settings: "liga", "clig";
  -ms-font-feature-settings: "liga", "clig";
  -webkit-font-feature-settings: "liga", "clig";
  font-feature-settings: "liga", "clig";
}

::-moz-selection {
    background: #FFF9A6;
    text-shadow: none;
}

::selection {
    background: #FFF9A6;
    text-shadow: none;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid;
    margin: 0 auto 4rem auto;
    width: 25%
}

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

img {
  max-width: 100%;
  height: auto;
}

/* ==========================================================================
   Typography
   ========================================================================== */

h1 {
  font-size: 8rem;
  font-weight: 400;
}

h2 {
  color: rgba(255,255,255,0.8);
  font-size: 3rem;
  margin-top: 0;
  margin-bottom: 2rem;
}

h3 {
  font-size: 1.5rem;
  font-weight: 400;
  font-style: italic;
  color: rgba(255,255,255,0.5);
  margin-top: 0px;
  margin-bottom: 2rem
}

p {
  margin-top: 0px;
  margin-bottom: 2rem;
}

.accent {
  font-style: italic;
}

@media screen and (min-width: 601px) and (max-width: 800px) {
   h1 {
    font-size: 6rem;
  }
}

@media screen and (max-width: 600px) {
  h1 {
    font-size: 4rem;
  }
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Navigation
   ========================================================================== */

a {
  color: #666;
  text-decoration: none;
}

a:hover {
  color: #999;
}

a.button {
  display: inline-block;
  background-color: #444;
  padding: 20px 40px;
  letter-spacing: 0.125rem;
  font-size: 1.5rem;
  color: #fff;
  font-weight: 400;
  font-style: italic;
}

a.button:hover {
  background-color: #555;
  color: #eee;
}

.hamburger {
  position: fixed;
  top: 0;
  right: 0;
  background-color: #fff;
  padding: 20px;
  z-index: 1000;
}

.hamburger:hover {
  cursor: pointer;
}

.navigation {
  display: none;
  justify-content: center;
  align-items: center;
  position: fixed;
  width: 100%;
  padding: 7px 0;
  text-align: center;
  background-color: rgba(255, 255, 255, 0.9);
}

.navigation ul li {
  display: inline-block;
  list-style-type: none;
  padding-left: 20px;
  font-size: 1.25rem;
}

.navigation ul li:first-of-type {
    padding-left: 0px;
}

@media screen and (max-width: 650px) {
  .navigation {
    justify-content: left;
  }
}

@media screen and (max-width: 600px) {
  .navigation {
    justify-content: left;
    text-align: left;
  }

  .navigation ul li {
    display: list-item;
    padding: 10px 0;
  }
}

/* ==========================================================================
   Hero
   ========================================================================== */

.hero {
  width: 100%;
  height: 100%;
  background: url("../img/KevandKit.jpg") no-repeat center center fixed;;
  background-size: cover;
  display: flex;
  justify-content: center;
  align-items: center;
}

@media only screen and (min-device-width : 375px) and (-webkit-min-device-pixel-ratio : 2) {
  .hero {
    background-attachment: scroll
  }
}

.site-title {
  margin: 0px;
  float: left;
  padding: 20px;
  color: rgba(255,255,255,0.9);
}

/* ==========================================================================
   Sections
   ========================================================================== */

[class*='wrapper-'] {
  padding: 6rem 0 4rem 0;
  text-align: center;
}

.wrapper--rsvp {
  background-color: #2B2E33;
}

.wrapper--rsvp hr {
  border-color: rgba(255,255,255,0.2);
  margin-bottom: 2rem;
}

.wrapper--rsvp p.accent {
    color: rgba(255,255,255,0.5);
}

.wrapper--rsvp h3 a {
  color: rgba(255,255,255,0.5);
}

.wrapper--rsvp h3 a:hover {
  color: rgba(255,255,255,0.7);
}

.section-title--rsvp {
  margin-top: 0;
  font-size: 5rem;
  letter-spacing: 0.25rem;
  line-height: 5rem;
}

.wrapper--registry {
  background-color: #E9FFE2;
}

.registry-item--container {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  margin-top: 2rem;
}

.registry-item {
  min-width: 300px;
}

.registry-item h2 {
  color: #333;
}

.registry-item a {
  display: block;
}

.registry-item:hover h2,
.registry-item:hover i {
  color: #666;
}

.registy-icon {
  font-size: 4rem;
  color: #333;
}

.wrapper--registry  .accent {
  color: #333;
  max-width: 60%;
  margin: 0 auto 4rem;
}

.wrapper--program {
  background:
    linear-gradient(
      rgba(0, 0, 0, 0.7),
      rgba(0, 0, 0, 0.7)
    ),

    url("../img/KevandKit2.jpg") center center fixed;
}

.wrapper--program hr {
  border-color: rgba(255,255,255,0.4);
}

.program {
  list-style-type: none;
  text-align: left;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.program h3 {
  color: #ccc;
  margin: 0 auto 4rem auto;
}

.program ul {
  margin: 0 auto 2rem auto;
  padding-left: 0px;
}

.program ul li {
  display: block;
  font-size: 1.25rem;
  color: #eee;
  letter-spacing: 0.125rem;
}

time {
  font-style: italic;
  color: #ccc;
}

.program i {
  padding: 0 0.5rem;
}

.wrapper--music {
  background:
    linear-gradient(
      rgba(255,255,255,0.9),
      rgba(255,255,255,0.9)
    ),

    url("../img/KevandKit3.jpg") no-repeat center  ;
    background-size: cover;
}

.music--container {
  margin: 0 auto;
  max-width: 60%;
}

.wrapper--music h3, .wrapper--music p  {
  color: #333;
  margin-bottom: 4rem;
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers:
 */

.hidden {
    display: none !important;
}

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

.invisible {
    visibility: hidden;
}

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

